[tool.poetry]
name = "kartsgym"
version = "0.1.0"
description = ""
authors = [
    "Radomir Krawczykiewicz <kotwic4@gmail.com>",
    "Marek Kaput <marek.kaput@outlook.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.17.1"
numpy = "^1.18.2"
pymunk = "^5.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
karts = "kartsgym:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
